--- a/index.html
+++ b/index.html
@@ -4,6 +4,31 @@
   <meta charset="UTF-8" />
   <title>Xuper TV APK 5.1.0 | Descarga App Última Versión Para Android/TV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- SEO Básico -->
+  <meta name="description" content="Xuper TV APK 5.1.0 – Descarga la última versión para Android y Smart TV. Mira TV en vivo, películas, series y deportes gratis con alta estabilidad.">
+  <meta name="keywords" content="Xuper TV, Xuper TV APK, Descargar Xuper TV, TV gratis Android, Televisión en vivo México, App películas gratis, Xuper TV 5.1.0">
+  <meta name="author" content="Xuper TV">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://xuperdclm.github.io/">
+
+  <!-- Open Graph (Facebook, WhatsApp) -->
+  <meta property="og:title" content="Xuper TV APK 5.1.0 – Descargar Última Versión">
+  <meta property="og:description" content="TV en vivo, películas, deportes y series totalmente gratis con Xuper TV para Android y Smart TV.">
+  <meta property="og:image" content="https://play-lh.googleusercontent.com/X9y-oebXwSt2L9kkAisY4EAXbV4v2tOMAHkmHBE6LC_22EA23m_WPZEjl34uVyetP4vtS0L102GjMFNtmGfk=w480-h960-rw">
+  <meta property="og:url" content="https://xuperdclm.github.io/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Xuper TV APK 5.1.0 – Descargar Gratis">
+  <meta name="twitter:description" content="Descarga Xuper TV para Android y Smart TV. Contenido gratis: TV, deportes, películas y más.">
+  <meta name="twitter:image" content="https://play-lh.googleusercontent.com/X9y-oebXwSt2L9kkAisY4EAXbV4v2tOMAHkmHBE6LC_22EA23m_WPZEjl34uVyetP4vtS0L102GjMFNtmGfk=w480-h960-rw">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="https://play-lh.googleusercontent.com/X9y-oebXwSt2L9kkAisY4EAXbV4v2tOMAHkmHBE6LC_22EA23m_WPZEjl34uVyetP4vtS0L102GjMFNtmGfk=w480-h960-rw">
+
   <style>
     body {
       margin: 0;
@@ -90,13 +115,13 @@
   </p>
 
   <div class="btn-wrap">
-    <a class="download-btn" href="https://xuper-tv.es.apkshark.io/" target="_blank">Descargar Xuper TV</a>
+    <a class="download-btn" href="https://xuper-tv.es.apkshark.io/" target="_blank">Descargar APK</a>
   </div>
 
   <div class="carousel">
-    <img src="https://play-lh.googleusercontent.com/XPHdrVgye5X3jil77yWxC3qbLxopmdcFFqphWJnA85ye1DRGCwSjOgIFdTU5XwUYKY8b6GiuyGQF83D5MUo=w1052-h592-rw" alt="Xuper TV screenshot 1">
-    <img src="https://play-lh.googleusercontent.com/AVO-80QF4nFy8QcYlsNMk1B3vE5Corpw26q1YSXbaiz5s6aTiftZJmxGkIG8itNA9bhX1e_rA9MojMGXaW92cQ=w1052-h592-rw" alt="Xuper TV screenshot 2">
-    <img src="https://play-lh.googleusercontent.com/2q9zvWYhVk7S0k3RPdha0e_KYwTeckuW_rdnelga0LSmg0og8Eo7BkcJH_U7-lfqJONcL1byib-xGKR6QJbw2Q=w1052-h592-rw" alt="Xuper TV screenshot 3">
+    <img src="https://play-lh.googleusercontent.com/XPHdrVgye5X3jil77yWxC3qbLxopmdcFFqphWJnA85ye1DRGCwSjOgIFdTU5XwUYKY8b6GiuyGQF83D5MUo=w1052-h592-rw" loading="lazy">
+    <img src="https://play-lh.googleusercontent.com/AVO-80QF4nFy8QcYlsNMk1B3vE5Corpw26q1YSXbaiz5s6aTiftZJmxGkIG8itNA9bhX1e_rA9MojMGXaW92cQ=w1052-h592-rw" loading="lazy">
+    <img src="https://play-lh.googleusercontent.com/2q9zvWYhVk7S0k3RPdha0e_KYwTeckuW_rdnelga0LSmg0og8Eo7BkcJH_U7-lfqJONcL1byib-xGKR6QJbw2Q=w1052-h592-rw" loading="lazy">
   </div>
 
   <div class="content">
