--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
 <body>
 
   <h1>Xuper TV</h1>
-  <div class="version">Versión 5.1.0</div>
+  <div class="version">Incluye las versiones: 5.1.0, 6.5.0, 4.34 3, ....</div>
 
   <p class="description">
     Xuper TV es una aplicación para ver TV en vivo, películas, series y deportes desde cualquier dispositivo Android o Smart TV, ofreciendo contenido actualizado y una experiencia rápida y estable.
   </p>
 
   <div class="btn-wrap">
-    <a class="download-btn" href="https://xuper-tv.es.apkshark.io/" target="_blank">Descargar APK</a>
+    <a class="download-btn" href="https://xuper-tv.es.apkshark.io/" target="_blank">Descargar Xuper TV</a>
   </div>
 
   <div class="carousel">
